Add logging functionality to application
The update includes the addition of the java.util.logging.Logger for improved error handling. This provides better exception logging in the DialogExtractor and DialogExtractorController classes. Previously, error tracking was done via simple stack trace printing. Now, errors will be logged properly, providing more context and information for debugging.